fiz a big_val, big_sum e big_comp

--- a/Trabalho SB/Trabalho SB/Trabalho SB.vcxproj.filters
+++ b/Trabalho SB/Trabalho SB/Trabalho SB.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="bigint.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="teste.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bigint.h">
